Bug 407409 - Discover lists Snap packages without icon in search results
Summary: Discover lists Snap packages without icon in search results
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
: 404372 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-10 22:54 UTC by Patrick Silva
Modified: 2021-05-16 14:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.62
Sentry Crash Report:


Attachments
screenshot (168.62 KB, image/jpeg)
2019-05-10 22:54 UTC, Patrick Silva
Details
screen recording on neon unstable (2.41 MB, video/webm)
2019-10-11 22:19 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-05-10 22:54:41 UTC
Created attachment 119970 [details]
screenshot

STEPS TO REPRODUCE
1. search for "vscode"
2. 
3. 

OBSERVED RESULT
Discover lists Snap packages without icon.
The app icon is present in its description page.
See the attached screenshot.

EXPECTED RESULT
Snap packages have icon in search result.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.0
Comment 1 Nate Graham 2019-05-28 21:53:11 UTC
LOL I see the opposite problem: the list entry has an icon, but the app page doesn't!
Comment 2 ianp 2019-06-02 13:00:03 UTC
I've observed the icon appearing after a DELAY or a refresh. EG on the GIMP Snap. Search gimp.
Comment 3 Aleix Pol 2019-08-06 13:42:58 UTC
Git commit 19d09d1ef958b68b8de56965b97d647cfe4ea7b6 by Aleix Pol.
Committed on 06/08/2019 at 13:42.
Pushed by apol into branch 'master'.

Kirigami.Icon: Fix loading bigger images when source is a URL

Summary:
Port to using the QImage::load() that takes a QIODevice and only do it when the
execution is finished, instead of upon readyRead(). This makes sure that we are
only processing the icon when is fully downloaded.
Related: bug 400312

Test Plan: Reproduced the bug and fixed it

Reviewers: #frameworks, #kirigami, mart

Reviewed By: #kirigami, mart

Subscribers: broulik, plasma-devel

Tags: #kirigami

Differential Revision: https://phabricator.kde.org/D22952

M  +36   -42   src/icon.cpp
M  +2    -2    src/icon.h

https://commits.kde.org/kirigami/19d09d1ef958b68b8de56965b97d647cfe4ea7b6
Comment 4 Patrick Silva 2019-10-11 22:18:52 UTC
This bug is not completelly fixed.
Sometimes the app icon only appears after I hover over the snap package listed in the search resuls and then move the cursor outside it. I recorded a video on Neon unstable edition showing this behavior.
Comment 5 Patrick Silva 2019-10-11 22:19:41 UTC
Created attachment 123152 [details]
screen recording on neon unstable
Comment 6 Aleix Pol 2019-10-28 19:05:19 UTC
I did reproduce it.
Comment 7 Aleix Pol 2019-10-28 19:05:54 UTC
*** Bug 404372 has been marked as a duplicate of this bug. ***
Comment 8 Patrick Silva 2021-05-16 14:05:24 UTC
cannot reproduce on neon unstable.