Kirigami.Icon: Fix loading bigger images when source is a URL

Summary:
Port to using the QImage::load() that takes a QIODevice and only do it when the
execution is finished, instead of upon readyRead(). This makes sure that we are
only processing the icon when is fully downloaded.

BUG: 407409
BUG: 400312

Test Plan: Reproduced the bug and fixed it

Reviewers: #frameworks, #kirigami, mart

Reviewed By: #kirigami, mart

Subscribers: broulik, plasma-devel

Tags: #kirigami

Differential Revision: https://phabricator.kde.org/D22952